2016-04-06 huku <huku@grhack.net>

    * Added fuction `dump_pe_coff()'; a custom parser for PE-COFF files.
    * Renamed `dump_otool()' to `dump_macho()'.
    * Renamed `dump_objdump()' to `dump_elf()'.


2016-03-12 huku <huku@grhack.net>

    * Fixed filename parsing problem in "sex_loader.py".
    * Check relocation type in `dump_pe_coff_relocations()'. Missing check
      resulted in some invalid relocations being printed.


2015-10-09 huku <huku@grhack.net>

    * Use sets instead of lists in "sex_loader.py".


2015-09-19 huku <huku@grhack.net>

    * Fixed bug in `dump_pe_coff_exit_points()' and modified it to print thunk
      addresses instead of import name addresses.


2015-09-16 huku <huku@grhack.net>

    * Added helper functions `is_decimal()' and `is_hexadecimal()'.
    * Modified "sex.sh" to append the ".sex" suffix in the directory name that
      will hold the extracted information.
    * Renamed "aux.txt" to "aux.ini"; we use a standard INI format which is
      easily parsable by Python's `ConfigParser' object.
    * Added experimental support for dumping PE-COFF exports, imports,
      relocations and functions. Information is written in "aux.ini".
    * Moved `dump_arch()' in `main()'.
    * Added check for `objdump'; some package managers on MacOS X install
      `objdump' as `gobjdump' instead.
    * Updated "sex_loader.py" to parse "aux.ini".
    * Added method `get_section_for_address_range()' in class `SexLoader' and
      modified `read()' accordingly.
    * Updated "README.md".
    * Updated "NOTES.md"


2015-07-30 huku <huku@grhack.net>

    * Modified "sex.sh" to write the name of the executable's architecture in
      a file named "aux.txt".
    * Fixed problem with Mach-O segments in `dump_otool()'.
    * Modified "sex_loader.py" to make it work on Microsoft Windows.
    * Renamed member `address' of class `SexLoader' to `start_address' and
      added member `end_address'.
    * Modified `SexLoader' constructor to read "aux.txt".

