@@ -1,2 +1,10 @@
+all:
+	@echo "Make what homie?"
+
+install:
+	python setup.py install
+
 clean:
-	rm -fr *.pyc
+	find . -iname '*.pyc' -type f -exec rm -f \{\} \;
+	python setup.py clean
+	rm -fr build
