@@ -1,0 +1,135 @@
+[MASTER]
+profile=no
+ignore=.git
+persistent=no
+
+
+[MESSAGES CONTROL]
+# Disable the `star-args' message; I know `*args' and `**kwargs' should be used
+# with care.
+disable=W0142,R0201
+
+
+[REPORTS]
+# output-format=html
+output-format=colorized
+reports=yes
+
+
+[BASIC]
+required-attributes=__author__
+bad-functions=apply,input,file
+good-names=i,j,k,_
+bad-names=foo,bar,baz,toto,tutu,tata
+name-group=
+include-naming-hint=yes
+no-docstring-rgx=__.*__
+docstring-min-length=-1
+
+function-rgx=[a-z_][a-z0-9_]{,48}$
+function-name-hint=[a-z_][a-z0-9_]{,48}$
+
+variable-rgx=[a-z_][a-z0-9_]{,48}$
+variable-name-hint=[a-z_][a-z0-9_]{,48}$
+
+const-rgx=(([A-Z_][A-Z0-9_]*)|(__.*__))$
+const-name-hint=(([A-Z_][A-Z0-9_]*)|(__.*__))$
+
+attr-rgx=[a-z_][a-z0-9_]{,48}$
+attr-name-hint=[a-z_][a-z0-9_]{,48}$
+
+argument-rgx=[a-z_][a-z0-9_]{,48}$
+argument-name-hint=[a-z_][a-z0-9_]{,48}$
+
+class-attribute-rgx=([A-Za-z_][A-Za-z0-9_]{,48}|(__.*__))$
+class-attribute-name-hint=([A-Za-z_][A-Za-z0-9_]{,48}|(__.*__))$
+
+inlinevar-rgx=[A-Za-z_][A-Za-z0-9_]*$
+inlinevar-name-hint=[A-Za-z_][A-Za-z0-9_]*$
+
+class-rgx=[A-Z_][a-zA-Z0-9]+$
+class-name-hint=[A-Z_][a-zA-Z0-9]+$
+
+module-rgx=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
+module-name-hint=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
+
+method-rgx=[a-z_][a-z0-9_]{,48}$
+method-name-hint=[a-z_][a-z0-9_]{,48}$
+
+
+[FORMAT]
+max-line-length=85
+ignore-long-lines=^\s*(# )?<?https?://\S+>?$
+single-line-if-stmt=no
+
+# List of optional constructs for which whitespace checking is disabled
+no-space-check=trailing-comma,dict-separator
+
+max-module-lines=2000
+indent-string="    "
+
+# Number of spaces of indent required inside a hanging or continued line.
+indent-after-paren=4
+
+
+[LOGGING]
+logging-modules=logging
+
+
+[MISCELLANEOUS]
+notes=FIXME,XXX,TODO
+
+
+[SIMILARITIES]
+min-similarity-lines=4
+ignore-comments=yes
+ignore-docstrings=yes
+ignore-imports=no
+
+
+[TYPECHECK]
+# Tells whether missing members accessed in mixin class should be ignored. A
+# mixin class is detected if its name ends with "mixin" (case insensitive).
+ignore-mixin-members=yes
+ignored-modules=
+ignored-classes=SQLObject,pyxed
+zope=no
+generated-members=REQUEST,acl_users,aq_parent
+
+
+[VARIABLES]
+init-import=yes
+dummy-variables-rgx=_$|dummy
+additional-builtins=
+
+
+[CLASSES]
+ignore-iface-methods=
+defining-attr-methods=__init__,__new__
+valid-classmethod-first-arg=cls
+valid-metaclass-classmethod-first-arg=mcs
+
+
+[DESIGN]
+max-args=5
+ignored-argument-names=_
+max-locals=15
+max-returns=1
+max-branches=16
+max-statements=64
+max-parents=7
+max-attributes=16
+min-public-methods=0
+max-public-methods=20
+
+
+[IMPORTS]
+deprecated-modules=regsub,TERMIOS,Bastion,rexec
+import-graph=
+ext-import-graph=
+int-import-graph=
+
+
+[EXCEPTIONS]
+overgeneral-exceptions=Exception
+
