@@ -1,0 +1,7 @@
+#!/usr/bin/env python
+from distutils.core import setup
+
+setup(name='S.EX.', version='2.0', description='S.EX.', author='huku',
+    author_email='huku@grhack.net', url='https://github.com/huku-/sex',
+    scripts=['bin/sex'], packages=['sex'])
+
