@@ -1,0 +1,5 @@
+#!/usr/bin/env python
+'''S.EX. - Section EXtractor.'''
+
+__author__ = 'huku@grhack.net'
+
